base/monitoring/kube-prometheus-stack/httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-prometheus-stack-alertmanager
  namespace: monitoring
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
      sectionName: internal-https
  hostnames:
    - alertmanager.local.${BASE_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathMatchPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-prometheus-stack-grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
      sectionName: internal-https
  hostnames:
    - grafana.local.${BASE_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathMatchPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-prometheus-stack-prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
      sectionName: internal-https
  hostnames:
    - prometheus.local.${BASE_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathMatchPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
